fix layout issues

--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -3,7 +3,6 @@
 .sidebar {
     margin-right: 80px;
     min-width: 320px;
-    width: 25%;
     background-color: #f8f9fa;
     height: calc(100vh - var(--wp-admin--admin-bar--height, 0px));
     position: sticky;
